Remove the following 3rd party dependencies: commons-collections4, commons-io, guava