@@ -3,9 +3,7 @@ package org.cytosm.cypher2sql.lowering.typeck.var;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.apache.commons.collections4.CollectionUtils;
 import org.cytosm.cypher2sql.cypher.ast.ASTNode;
 import org.cytosm.cypher2sql.cypher.ast.clause.match.pattern.NodePattern;
 import org.cytosm.cypher2sql.cypher.ast.clause.match.pattern.RelationshipPattern;
@@ -29,13 +27,15 @@ public abstract class NodeOrTempOrRelVar extends Var {
     }
 
     private static List<String> getLabels(ASTNode n) {
-        if (n instanceof NodePattern) {
-            final NodePattern np = (NodePattern) n;
-            if (CollectionUtils.isNotEmpty(np.labels)) return np.labels.stream().map(ln -> ln.name).collect(Collectors.toList());
+        if (n instanceof final NodePattern np) {
+            if (null != np.labels) {
+                return np.labels.stream().map(ln -> ln.name).toList();
+            }
         }
-        else if (n instanceof RelationshipPattern) {
-            final RelationshipPattern rp = (RelationshipPattern) n;
-            if (CollectionUtils.isNotEmpty(rp.types)) return rp.types.stream().map(rtn -> rtn.name).collect(Collectors.toList());
+        else if (n instanceof final RelationshipPattern rp) {
+            if (null != rp.types) {
+                return rp.types.stream().map(rtn -> rtn.name).toList();
+            }
         }
         return new ArrayList<>();
     }
